<resources>
    <string name="app_name">LastNight</string>
    <string name="start_login">Login</string>
    <string name="start_password">Mot de passe</string>
    <string name="start_create_account">Créer un nouveau compte</string>
    <string name="start_connection">Connexion</string>
    <string name="start_null">Complétez les deux champs pour vous connecter</string>
    <string name="start_login_failed">Connexion échouée. Vérifiez votre login et votre mot de passe.</string>
    <string name="start_help">En cas de problème, veuillez contacter pact41.lastnight@gmail.com</string>
    <string name="my_profile_title">Votre profil</string>
    <string name="my_profile_lastpartytext">Dernière soirée :</string>
    <string name="my_profile_edit">Modifier</string>
    <string name="my_profile_delete">Supprimer</string>
    <string name="my_profile_delete_confirmation">Votre ami %1$s a bien été supprimé.</string>
    <string name="my_profile_delete_failure">Votre ami %1$s n\'a pas pu être supprimé. Veuillez réessayer plus tard.</string>
    <string name="my_profile_mail_address">Adresse e-mail :</string>
    <string name="my_profile_username">Nom d\'utilisateur : </string>
    <string name="menu_refresh">Rafraîchir</string>
    <string name="menu_edit_profile">Profil</string>
    <string name="menu_friends">Amis</string>
    <string name="menu_reports">Historique</string>
    <string name="menu_organize">Organiser une soirée</string>
    <string name="menu_current_party">Soirée en cours</string>
    <string name="menu_already_into_menu_message">Vous êtes déjà dans le menu %1$s</string>
    <string name="menu_quit_alert_title">Quitter l\'application</string>
    <string name="menu_quit_alert_message">Voulez-vous vraiment quitter LastNight ?</string>
    <string name="edit_profile_title">Editer votre profil</string>
    <string name="edit_profile_last_name">Nouveau nom</string>
    <string name="edit_profile_first_name">Nouveau prénom</string>
    <string name="edit_profile_mail">Nouveau mail</string>
    <string name="edit_profile_confirm_mail">Confirmer le nouveau mail</string>
    <string name="edit_profile_new_password">Nouveau mot de passe</string>
    <string name="edit_profile_confirm_new_password">Confirmer le nouveau mot de passe</string>
    <string name="edit_profile_picture">Photo personnelle</string>
    <string name="edit_profile_load_new_picture">Sélectionner une photo</string>
    <string name="edit_profile_confirm_modifications">Confirmer les modifications</string>
    <string name="edit_profile_confirmed">Profil modifié!</string>
    <string name="edit_profile_failed">Votre profil n\'a pas pu être mis à jour</string>
    <string name="edit_profile_error">Vous devez remplir au moins un champ ou modifier votre photo</string>
    <string name="current_party_title">Soirée en cours</string>
    <string name="current_party_messages_list_title">Messages de l\'organisateur</string>
    <string name="current_party_last_poll_title">Dernier sondage</string>
    <string name="current_party_admin_send_msg">Envoyer un message aux invités</string>
    <string name="current_party_admin_send_poll">Proposer un sondage aux invités</string>
    <string name="current_party_leave_button">Quitter la soirée</string>
    <string name="current_party_no_message">Pas de message à afficher</string>
    <string name="current_party_no_poll">Pas de sondage actuellement</string>
    <string name="current_party_new_message_title">Quel est votre message?</string>
    <string name="current_party_poll_not_created_error">Le sondage n\'a pas pu être envoyé. Veuillez réessayer plus tard.</string>
    <string name="current_party_poll_created_confirmation">Le sondage a bien été créé. Il est désormais consultable par les invités pendant 15 minutes.</string>
    <string name="current_party_message_sent_confirmation">Message envoyé ! Il est désormais visible par les invités.</string>
    <string name="current_party_message_not_sent_error">Le message n\'a pas pu être envoyé. Veuillez réessayer plus tard.</string>
    <string name="current_party_vote_sent_confirmation">Votre vote pour %1$s a bien été pris en compte.</string>
    <string name="current_party_vote_not_sent_error">Le vote n\'a pas pu être envoyé. Veuillez réessayer plus tard.</string>
    <string name="current_party_photo">Prendre une photo de la soirée</string>
    <string name="current_party_photo_fail">La photo n\'a pas pu être chargée</string>
    <string name="current_party_photo_sent">La photo a bien été envoyée!</string>
    <string name="current_party_photo_not_sent">La photo n\'a pas été envoyée. Veuillez réessayer plus tard.</string>
    <string name="friend_name">Nom</string>
    <string name="friend_online_unavailable">En ligne/Indisponible</string>
    <string name="friend_current_party">Soirée en cours</string>
    <string name="friendlist_title">Liste d\'amis</string>
    <string name="friendlist_add">Ajouter un ami</string>
    <string name="friendlist_add_validate">Ajouter</string>
    <string name="friendlist_add_title">Quel est l\'ID de votre ami?</string>
    <string name="friendlist_add_success">L\'utilisateur %1$s a bien été ajouté à votre liste d\'amis.</string>
    <string name="friendlist_add_failed">Echec de l\'ajout d\'ami. Vérifiez votre connexion et le nom d\'utilisateur saisi.</string>
    <string name="friend_profile">Profil</string>
    <string name="friend_profile_last_name">Nom</string>
    <string name="friend_profile_first_name">Prénom</string>
    <string name="new_account_login">Login</string>
    <string name="new_account_password">Mot de passe</string>
    <string name="new_account_confirm_password">Confirmer le mot de passe</string>
    <string name="new_account_sign_up">S\'inscrire</string>
    <string name="new_account_last_name">Nom</string>
    <string name="new_account_first_name">Prénom</string>
    <string name="new_account_mail">E-mail</string>
    <string name="new_account_confirm_mail">Confirmer l\'adresse e-mail</string>
    <string name="new_account_cheers">Félicitations! Votre compte LastNight a bien été créé!</string>
    <string name="new_account_fail_mail">Adresse e-mail invalide</string>
    <string name="new_account_fail_mails_notsame">Les adresses e-mail ne sont pas les mêmes</string>
    <string name="new_account_fail_passwords_notsame">Les mots de passe ne sont pas les mêmes</string>
    <string name="new_account_fail_picture">La photo de peut être chargée</string>
    <string name="new_account_null">Vous devez remplir tous les champs pour valider l\'inscription</string>
    <string name="new_account_creation_failed">Votre compte n\'a pas pu être créé. Veuillez réessayer plus tard.</string>
    <string name="party_name">Nom de la soirée</string>
    <string name="party_date">Date de la soirée</string>
    <string name="party_place">Lieu de la soirée</string>
    <string name="party_previous">Précédentes soirées</string>
    <string name="party_title">Profil de la soirée</string>
    <string name="full_party_hours">Horaires: de</string>
    <string name="full_party_hours_next">à</string>
    <string name="full_party_hours_pattern">HH:MM</string>
    <string name="full_party_price">Prix:</string>
    <string name="full_party_priceedit">xx</string>
    <string name="full_party_currency">€</string>
    <string name="full_party_description">Descriptif :</string>
    <string name="full_party_sign_up">Y aller!</string>
    <string name="full_party_recap">Accéder au récapitulatif de la soirée</string>
    <string name="full_party_not_found">Soirée spécifiée introuvable.</string>
    <string name="full_party_cant_join">Impossible de rejoindre l\'événement. Veuillez réessayer plus tard.</string>
    <string name="organize_title">Votre soirée</string>
    <string name="organize_load">Charger une image</string>
    <string name="organize_name">Nom de votre soirée: </string>
    <string name="organize_nameedit">Nom</string>
    <string name="organize_date">Date de votre soirée: </string>
    <string name="organize_date_pattern">JJ/MM/20AA</string>
    <string name="organize_place">Lieu :</string>
    <string name="organize_place_edit">Lieu</string>
    <string name="organize_hours">Horaires: de</string>
    <string name="organize_hours_next">à</string>
    <string name="organize_hours_pattern">HH:MM</string>
    <string name="organize_price">Prix: </string>
    <string name="organize_priceedit">xx</string>
    <string name="organize_currency">€</string>
    <string name="organize_admins">Liste des administrateurs :</string>
    <string name="organize_validate">Organiser!</string>
    <string name="organize_validated">Votre soirée a bien été créée!</string>
    <string name="organize_error">Votre soirée n\'a pas pu être créée. Vérifiez les informations saisies ou réessayez plus tard.</string>
    <string name="organize_add_new_admin">Ajouter</string>
    <string name="organize_admin_field_hint">Nom d\'utilisateur de l\'admin</string>
    <string name="organize_admin_delete_confirmation">Êtes-vous sûr de vouloir supprimer cette saisie ?</string>
    <string name="organize_admin_delete_confirmation_title">Confirmation de suppression de l\'admin</string>
    <string name="qr_code_scan_title">Rejoindre une soirée</string>
    <string name="qrcode_saisie_info">Il est aussi possible de rentrer manuellement le nom de la soirée</string>
    <string name="qrcode_scan_info">"Pour rejoindre un événément répertorié sur notre plateforme LastNight, scanne l'un des QR codes que l'organisateur a placés à l'intérieur !"</string>
    <string name="qrcode_scan_button_content">Scanner</string>
    <string name="qrcode_saisie_button_content">Confirmer la saisie</string>
    <string name="qrcode_scan_party_not_found_message">Saisissez un nom d\'événement valide.</string>
    <string name="messages_list_close">Retour</string>
    <string name="last_poll_confirm">Valider</string>
    <string name="last_poll_dialog_title">Valider votre choix</string>
    <string name="last_poll_dialog_message">Vous avez choisi l\'option %1$s. Confirmer votre choix ?</string>
    <string name="last_poll_choice_default">Choisissez une option</string>
    <string name="last_poll_choice">Votre choix : %1$s</string>
    <string name="last_poll_dialog_validate_choice">OK</string>
    <string name="last_poll_dialog_cancel_choice">Annuler</string>
    <string name="last_poll_no_option_selected">Vous n\'avez choisi aucune option. Sélectionnez-en une et réessayez.</string>
    <string name="new_poll_validate">Valider</string>
    <string name="new_poll_add">+</string>
    <string name="new_poll_new_option_title">Quelle est votre option?</string>
    <string name="new_poll_new_option_validate">Créer l\'option</string>
    <string name="new_poll_delete">Supprimer cette option?</string>
    <string name="new_poll_no">Non</string>
    <string name="new_poll_yes">Oui</string>
    <string name="new_poll_error">Sondage invalide. Vérifiez votre saisie.</string>
    <string name="new_poll_title">Question à poser</string>
    <string name="recap_title">Récapitulatif de votre soirée</string>
    <string name="recap_youractivity">Tempo de vos mouvements (bpm)</string>
    <string name="recap_yourscore">Votre score LastNight</string>
    <string name="recap_progress">Progression : %1$i %</string>
    <string name="sensor_service_warning_sensor_not_found">Avertissement : votre appareil ne dispose pas des capteurs nécessaires au suivi de vos mouvements. Vous ne pourrez pas bénéficier des statistiques de danse. </string>
    <string name="sensor_service_started">Le suivi de vos mouvements a commencé.</string>
    <string name="sensor_service_stopped">Soirée terminée. Suivi interrompu.</string>
    <string name="sensor_service_already_started">Suivi des mouvements déjà en route</string>
    <string name="sensor_service_running">Soirée en cours - Accéder à la page de la soirée</string>
</resources>