<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/default_party_picture"
        android:layout_centerHorizontal="true"
        android:id="@+id/full_party_pp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_name"
        android:layout_below="@id/full_party_pp"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:id="@+id/full_party_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_date"
        android:layout_below="@id/full_party_name"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:id="@+id/full_party_date"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_place"
        android:layout_below="@id/full_party_date"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:id="@+id/full_party_place"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_party_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/full_party_full_hours">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_party_hours"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:id="@+id/full_party_hours"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_party_hours_pattern"
            android:textSize="16dp"
            android:layout_alignBaseline="@id/full_party_hours"
            android:layout_toRightOf="@id/full_party_hours"
            android:layout_marginLeft="5dp"
            android:id="@+id/full_party_hours_begin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_party_hours_next"
            android:textSize="16dp"
            android:layout_toRightOf="@id/full_party_hours_begin"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/full_party_hours_next"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organize_hours_pattern"
            android:textSize="16dp"
            android:layout_alignBaseline="@id/full_party_hours_next"
            android:layout_toRightOf="@id/full_party_hours_next"
            android:layout_marginLeft="5dp"
            android:id="@+id/full_party_hours_end"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_party_full_hours"
        android:layout_centerHorizontal="true"
        android:id="@+id/full_party_full_price">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_party_price"
        android:textSize="16dp"
        android:id="@+id/full_party_price"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_party_priceedit"
        android:textSize="16dp"
        android:gravity="end"
        android:id="@+id/full_party_priceedit"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_party_currency"
        android:textSize="16dp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/full_party_sign_up"
        android:text="@string/full_party_sign_up"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/full_party_recap"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/full_party_recap"/>

</RelativeLayout>